# CorvoPay

./: Cargo.toml  README.md
src/: main.rs
src/app/: error.rs
src/application/: mod.rs
src/application/context/: gateway_request.rs  mod.rs
src/application/dto/: create_payment_intent.rs  create_payment_intent_response.rs  mod.rs
src/contracts/: gateway.rs
src/domain/: error.rs  mod.rs
src/domain/gateway/: gateway.rs  gateway_capabilities.rs  gateway_info.rs  mod.rs
src/domain/value_objects/: amount.rs  gateway.rs  gateway_attempt_id.rs  mod.rs  payment_status.rs
src/domain/value_objects/customer/: document.rs  email.rs  mod.rs  name.rs  payer.rs
src/domain/value_objects/payment_method/: boleto.rs  card.rs  mod.rs  payment_method.rs  pix.rs
src/domain/value_objects/payment_method_response/: boleto.rs  card.rs  mod.rs  payment_method_response.rs  pix.rs
src/gateways/: error.rs  gateway.md  mod.rs
src/gateways/mercado_pago/: client.rs  gateway.rs  info.rs  mod.rs  request.rs  response.rs  utils.rs
src/gateways/mercado_pago/pix/: mapper.rs
